[metadata]
name = twitcasting_py
version = attr: twitcasting_py.__version__
url = https://github.com/kkent030315/twitcasting-py
author = Kento Oki
author_email = hrn832@protonmail.com
description = A Python module for wrapping TwitCasting common APIs
long_description = file: README.md
license_file = LICENSE

[options.packages.find]
where = src
exclude =
    tests

[options]
python_requires = >=3.6
package_dir =
    =src
install_requires =
  requests
  bs4