[metadata]
name = twitcasting_py
version = 0.1.3
url = https://github.com/kkent030315/twitcasting-py
author = Kento Oki
author_email = hrn832@protonmail.com
description = A unofficial python module for wrapping TwitCasting common APIs
long_description = file: README.md
license_file = LICENSE

[options]
zip_safe = False
packages = .
python_requires = >=3.6
include_package_data = True
package_dir =
    =src
install_requires =
  requests
  bs4

[options.packages.find]
where = src
exclude =
    tests