[metadata]
name = twitcasting_py
version = 0.1.4
url = https://github.com/kkent030315/twitcasting-py
author = Kento Oki
author_email = hrn832@protonmail.com
description = A unofficial python module for wrapping TwitCasting common APIs
long_description = file: README.pypi.md
license_file = LICENSE
classifiers =
    Development Status :: 5 - Production/Stable
    Topic :: Utilities
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: POSIX :: Linux
    Operating System :: Unix
    Operating System :: MacOS
    Operating System :: Microsoft :: Windows

[options]
zip_safe = False
packages = .
python_requires = >=3.6
include_package_data = True
package_dir =
    =src
install_requires =
  requests
  bs4

[options.packages.find]
where = src
exclude =
    tests